2008-09-14  Peter Bloomfield

	* libbalsa/mailbox_mbox.c: (lbm_mbox_stream_seek_to_message):
	better debugging.

2006-09-14  Paweł Sałek

	* src/balsa-index.c: process messages with external program -
	asynchronously.

2008-09-14  Peter Bloomfield

	* libbalsa/body.c:
	(libbalsa_message_body_get_stream): fail if message has no mailbox.
	* libbalsa/mailbox_mbox.c:
	(free_message_info, free_messages_info): plug memory leak;
	(lbm_mbox_stream_seek_to_message, libbalsa_mailbox_mbox_open,
	libbalsa_mailbox_mbox_sync): debugging output;
	(libbalsa_mailbox_mbox_check): ditto; more careful check for
	new mail.
	* src/balsa-mime-widget-text.c:
	(balsa_mime_widget_new_text): check for NULL part.
	* src/balsa-print-object-text.c:
	(balsa_print_object_text_vcard): ditto
	* src/sendmsg-window.c:
	(fill_body_from_part, bsm_finish_setup): ditto.

2008-09-13  Peter Bloomfield

	* src/balsa-icons.c: (load_balsa_pixmap): add more fallbacks to
	cope with woeful gnome-icon-theme-2.23+; use
	GTK_STOCK_MISSING_IMAGE when all else fails, to avoid Gtk
	warnings.

2008-09-09  Peter Bloomfield

	Gtk 2.14 deprecation cleanup

	* libbalsa/mailbox.c: (mbox_set_sort_func),
	(mbox_set_default_sort_func):
	* libbalsa/source-viewer.c: (libbalsa_show_message_source):
	* libinit_balsa/assistant_page_user.c:
	(balsa_druid_page_user_init):
	* libinit_balsa/balsa-druid-page-user.c:
	(balsa_druid_page_user_init):
	* src/ab-window.c: (balsa_ab_window_get_type):
	* src/ab-window.h:
	* src/balsa-cite-bar.c: (balsa_cite_bar_class_init):
	* src/balsa-index.c: (balsa_index_get_type), (bndx_class_init),
	(bndx_popup_menu_create), (create_stock_menu_item):
	* src/balsa-index.h:
	* src/balsa-mblist.c: (balsa_mblist_get_type):
	* src/balsa-mblist.h:
	* src/balsa-message.c: (balsa_message_get_type),
	(tree_mult_selection_popup), (add_to_attachments_popup),
	(add_toggle_inline_menu_item):
	* src/balsa-message.h:
	* src/balsa-mime-widget.h:
	* src/filter-edit-callbacks.c: (build_type_notebook):